--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -1,7 +1,7 @@
 {
   "address": {
     "title": "アドレス",
-    "transactions": "発信トランザクション",
+    "transactions": "送金トランザクション",
     "finalBalance": "最終残高"
   },
   "block": {
@@ -41,13 +41,13 @@
         "title": "～に含まれる",
         "block": "ブロック"
       },
-      "totalOutput": "全生産量",
+      "totalOutput": "ブロックの総生産量",
       "fee": "トランザクション料金"
     }
   },
   "search": {
     "buttonText": "検索",
-    "placeholder": "DISCIPLINAネットワーク上のアドレス、トランザクションの検索"
+    "placeholder": "DISCIPLINAネットワーク上のアドレスやトランザクションを検索"
   },
   "footer": {
     "address": "Narva mnt 7-634, 10117, Kesklinna linnaosa, Tallinn, Estonia;"
@@ -64,11 +64,11 @@
     "blockLeader": "ブロックリーダー",
     "blockHash": "ブロックハッシュ",
     "size": "容量（バイト）",
-    "newerBlocks": "比較的新しいブロック",
+    "newerBlocks": "最初のページへ",
     "olderBlocks": "比較的古いブロック"
   },
   "notFound": {
-    "title": "該当する記録が見つかりません",
+    "title": "適合する記録が見つかりません",
     "back": "ホームページに戻る"
   }
 }
