--- a/src/locales/ko-KR.json
+++ b/src/locales/ko-KR.json
@@ -1,14 +1,14 @@
 {
   "address": {
     "title": "주소",
-    "transactions": "나가는 거래",
+    "transactions": "보내는 트랜잭션",
     "finalBalance": "최종 잔액"
   },
   "block": {
     "title": "블록",
     "about": {
       "title": "블록에 대해",
-      "blockIndex": "블록 색인",
+      "blockIndex": "블록 인덱스",
       "transactions": "거래내역",
       "totalOutput": "총 생산량",
       "fees": "요금"
@@ -32,8 +32,8 @@
   },
   "transaction": {
     "title": "거래",
-    "from": "From",
-    "to": "To",
+    "from": "에서",
+    "to": "으로",
     "summary": {
       "title": "요약",
       "time": "입금 시각",
@@ -41,13 +41,13 @@
         "title": "포함",
         "block": "블록"
       },
-      "totalOutput": "총 생산량",
+      "totalOutput": "블록 총 생산량",
       "fee": "거래 수수료"
     }
   },
   "search": {
     "buttonText": "검색",
-    "placeholder": "DISCIPLINA 네트워크에서 주소, 트랜잭션 검색"
+    "placeholder": "DISCIPLINA 네트워크에서 주소, 거래 검색하기"
   },
   "footer": {
     "address": "Narva mnt 7-634, 10117, Kesklinna linnaosa, Tallinn, Estonia;"
@@ -57,18 +57,18 @@
   },
   "showMore": "더보기",
   "blockList": {
-    "blockIndex": "블록 색인",
+    "blockIndex": "블록 인덱스",
     "since": "경과시간",
     "transaction": "거래",
     "totalSent": "총 송금액",
     "blockLeader": "슬롯 리더",
-    "blockHash": "해시 차단",
+    "blockHash": "블록 해시",
     "size": "사이즈 (바이트)",
-    "newerBlocks": "신 블록",
+    "newerBlocks": "첫 페이지로 가기",
     "olderBlocks": "구 블록"
   },
   "notFound": {
-    "title": "일치하는 레코드가 없습니다",
-    "back": "홈페이지로 돌아 가기"
+    "title": "다음과 일치하는 기록이 없습니다.",
+    "back": "홈페이지로 돌아가기"
   }
 }
