--- a/src/locales/ja-JP.json
+++ b/src/locales/ja-JP.json
@@ -64,7 +64,7 @@
     "blockLeader": "ブロックリーダー",
     "blockHash": "ブロックハッシュ",
     "size": "容量（バイト）",
-    "newerBlocks": "最初のページへ",
+    "newerBlocks": "比較的新しいブロック",
     "olderBlocks": "比較的古いブロック"
   },
   "notFound": {
